paypal is back doods

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,5 @@
 patreon: JackBaron
 ko_fi: lolpants
-custom: ['https://www.paypal.me/jackmbaron', 'https://monzo.me/jackbaron']
+custom:
+- 'https://www.paypal.me/jackbarondev'
+- 'https://monzo.me/jackbaron'
